--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     </header>
     <!-- header>(nav>(a>img)+ul>li*3>a)+ul>li*3>a -->
     <main>
-      <section></section>
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+      </section>
       <section></section>
       <section></section>
       <section></section>
